--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "core-js": "^3.1.2",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.2",
+    "mongoose-unique-validator": "^2.0.1",
     "multer": "^1.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.9.1"
